      tags (if enabled) instead of being kept in the database.
    * Last.fm Skip button removed; Last.fm API no longer provides it. (BR 305576)
    * Optional liblastfm dependency raised to 1.0.0. (BR 302597)
    * Add composer button to wikipedia applet (BR 272982)
    * New optional dependency for Amazon downloads: clamz.

  BUGFIXES:
    * Better Last.fm scrobbling behaviour and error reporting due to rewrite,
      should fix long-standing problems. (BR 293320, BR 285820)
    * Update stream meta-data correctly even with phonon-gstreamer back-end. (BR 300189)
    * Fix available transcoding encoders detection with ffmpeg 1.0. (BR 309454)
    * Fix playback resuming with phonon-gstreamer; raise phonon-vlc dependency
      to at least 0.6.1 as a side-effect. (BR 290612)
    * Create collections even for SD/MMC/etc. cards on PCI-connected slots.
    * Fixed some incorrect logic in the PlaylistLength constraint, which was
      causing the APG to create playlists that were shorter than expected.
      (BR 293616)
    * Improve Duplicate files found dialog. (BR 308762)
    * Fix crashes in SqlRegistry because of its false thread-safety. (BR 230991)
    * Fix crash on malformed DAAP reply. (BR 284186)
    * Fix first & last played time not remembered for files outside of collection.
    * Nepomuk plugin now makes Nepomuk ratings visible in Amarok. (BR 174630)
    * Fix some track tag modifications not being updated until restart
      (e.g. changing disc number from 1 to 0).
    * Repeat playlist correctly with a single track playlist. (BR 290955)
    * Don't append playlist when pressing enter while editing. (BR 305203)
    * Fix track transfer to iPods in de (and perhaps other) locale. (BR 305134)

VERSION 2.6
  BUGFIXES:
    * Fix problems when sql server is not reachable (BR 298425)
    * Fix crash with exporting playlists with invalid tracks (BR 303056, BR 302607, BR 297816)

VERSION 2.6-RC
  CHANGES: