@@ -929,7 +929,12 @@ Dynamic::DynamicModel::initPlaylists()
     // - a playlist demonstrating the SearchQueryBias
     playlist = new Dynamic::BiasedPlaylist( this );
     playlist->setTitle( i18n("Rock and Pop") );
-    playlist->bias()->replace( Dynamic::BiasPtr( new Dynamic::SearchQueryBias( "genre:Rock OR genre:Pop" ) ) );
+    QString query = Meta::shortI18nForField( Meta::valGenre ) + ":" + i18n( "Rock" );
+    /* following cannot be currently translated, see ExpressionParser::isAdvancedExpression()
+     * and ExpressionParser::finishedToken() */
+    query += " AND ";
+    query += Meta::shortI18nForField( Meta::valGenre ) + ":" + i18n( "Pop" );
+    playlist->bias()->replace( Dynamic::BiasPtr( new Dynamic::SearchQueryBias( query ) ) );
     insertPlaylist( 1, playlist );
 
     // - a complex playlist demonstrating AlbumPlay and IfElse
@@ -938,7 +943,8 @@ Dynamic::DynamicModel::initPlaylists()
     Dynamic::IfElseBias *ifElse = new Dynamic::IfElseBias();
     playlist->bias()->replace( Dynamic::BiasPtr( ifElse ) );
     ifElse->appendBias( Dynamic::BiasPtr( new Dynamic::AlbumPlayBias() ) );
-    ifElse->appendBias( Dynamic::BiasPtr( new Dynamic::SearchQueryBias( "tracknumber:1" ) ) );
+    query = Meta::shortI18nForField( Meta::valTrackNr ) + ":1";
+    ifElse->appendBias( Dynamic::BiasPtr( new Dynamic::SearchQueryBias( query ) ) );
     insertPlaylist( 2, playlist );
 
     // - a complex playlist demonstrating PartBias and TagMatchBias
