@@ -43,6 +43,7 @@ VERSION 2.7-Beta 1
     * New optional dependency for Amazon downloads: clamz.
 
   BUGFIXES:
+    * Fix untranslatable texts in preset dynamic playlists. (BR 276023)
     * Better Last.fm scrobbling behaviour and error reporting due to rewrite,
       should fix long-standing problems. (BR 293320, BR 285820)
     * Update stream meta-data correctly even with phonon-gstreamer back-end. (BR 300189)
